fix inbox height

--- a/messaging/inbox.html
+++ b/messaging/inbox.html
@@ -753,6 +753,152 @@
                                     data-testid="host-inbox-threads"
                                     id="host-inbox-threads"
                                   >
+                                    <li class="_1qp2r1d" aria-current="false">
+                                      <div
+                                        class="_3ux63j"
+                                        role="group"
+                                        aria-label="Conversation with Jesselle Papa"
+                                      >
+                                        <a
+                                          data-testid="host-inbox-threadlist-item"
+                                          data-threadid="1212691254"
+                                          data-active="false"
+                                          class="_1ft3e2s"
+                                          tabindex="0"
+                                          href="/hosting/inbox/exp/folder/all/thread/1212691254/details"
+                                          ><div class="flex">
+                                            <div class="_ajdgyn">
+                                              <div
+                                                class="img-middle"
+                                                style="
+                                                  display: inline-block;
+                                                  vertical-align: bottom;
+                                                  height: 48px;
+                                                  width: 48px;
+                                                  min-height: 1px;
+                                                  border-radius: 50%;
+                                                "
+                                                role="img"
+                                                aria-busy="false"
+                                                aria-label="Jesselle"
+                                              >
+                                                <img
+                                                  class="img-full"
+                                                  aria-hidden="true"
+                                                  alt="Jesselle"
+                                                  decoding="async"
+                                                  elementtiming="LCP-target"
+                                                  src="https://a0.muscache.com/defaults/user_pic-225x225.png?v=3"
+                                                  data-original-uri="https://a0.muscache.com/defaults/user_pic-225x225.png?v=3"
+                                                  style="
+                                                    object-fit: cover;
+                                                    vertical-align: bottom;
+                                                    border-radius: 50%;
+                                                  "
+                                                />
+                                                <div
+                                                  class="background__img-position-center"
+                                                  style="
+                                                    background-image: url('https://a0.muscache.com/defaults/user_pic-225x225.png?v=3');
+                                                    background-size: cover;
+                                                    border-radius: 50%;
+                                                  "
+                                                ></div>
+                                              </div>
+                                            </div>
+                                          </div>
+                                          <div class="_1ulu8c8">
+                                            <div class="_abkqj1">
+                                              <div class="description-textarea__help-text">
+                                                <div
+                                                  aria-hidden="true"
+                                                  class="_1iurgbx"
+                                                >
+                                                  Booking completed
+                                                </div>
+                                                <span
+                                                  class="text-highlight dir dir-ltr"
+                                                  >Booking status is Booking
+                                                  completed</span
+                                                >
+                                              </div>
+                                              <div class="_1fdf7l8">Sat</div>
+                                            </div>
+                                            <div class="_abkqj1">
+                                              <span class="_rm5fkdz"
+                                                ><div
+                                                  aria-hidden="true"
+                                                  class="_1iurgbx"
+                                                >
+                                                  Jesselle Papa
+                                                </div>
+                                                <span
+                                                  class="text-highlight dir dir-ltr"
+                                                  >Conversation with Jesselle
+                                                  Papa</span
+                                                ></span
+                                              >
+                                            </div>
+                                            <div class="_abkqj1">
+                                              <div class="_1pyvextg">
+                                                <div
+                                                  aria-hidden="true"
+                                                  class="inbox-container__message-name-overlay"
+                                                >
+                                                  You<!-- -->:
+                                                  <!-- -->Hello, Thanks for
+                                                  booking the experience.
+                                                </div>
+                                                <span
+                                                  class="text-highlight dir dir-ltr"
+                                                  >Message preview: You: Hello,
+                                                  Thanks for booking the
+                                                  experience.
+                                                </span>
+                                              </div>
+                                              <div class="_641ui9">
+                                                <svg
+                                                  viewBox="0 0 16 16"
+                                                  xmlns="http://www.w3.org/2000/svg"
+                                                  style="
+                                                    display: block;
+                                                    height: 12px;
+                                                    width: 12px;
+                                                    fill: currentColor;
+                                                  "
+                                                  aria-hidden="true"
+                                                  role="presentation"
+                                                  focusable="false"
+                                                >
+                                                  <path
+                                                    d="M8.28 11.72L6.16 13.84l-5.5-5.5a1.5 1.5 0 0 1-.103-2.007l.103-.114 5.5-5.5L8.28 2.84 5.12 6H7a9 9 0 0 1 8.996 8.735L16 15h-3a6 6 0 0 0-5.775-5.996L7 9H5.56l2.72 2.72z"
+                                                  ></path>
+                                                </svg>
+                                              </div>
+                                            </div>
+                                            <div class="_13zfmac">
+                                              <div
+                                                aria-hidden="true"
+                                                class="_1iurgbx"
+                                              >
+                                                Jun 25, 2022<!-- -->
+                                                ·
+                                                <!-- -->Cooking Deep Fried
+                                                Bright Orange Battered Eggs
+                                              </div>
+                                              <span class="text-highlight dir dir-ltr"
+                                                >Jun 25, 2022 · Cooking Deep
+                                                Fried Bright Orange Battered
+                                                Eggs</span
+                                              >
+                                            </div>
+                                            <span class="text-highlight dir dir-ltr"
+                                              >Responded</span
+                                            >
+                                          </div></a
+                                        >
+                                      </div>
+                                    </li>
                                     <li class="_1qp2r1d" aria-current="true">
                                       <div
                                         class="_1drxvd9r"
@@ -825,26 +971,17 @@
                                               <div class="_1fdf7l8">Sat</div>
                                             </div>
                                             <div class="_abkqj1">
-                                              <span class="_rm5fkdz"
-                                                ><div
-                                                  aria-hidden="true"
-                                                  class="_1iurgbx"
-                                                >
-                                                  Cooking Deep Fried Bright
-                                                  Orange Battered Eggs
-                                                </div>
-                                                <span
-                                                  class="text-highlight dir dir-ltr"
-                                                  >Cooking Deep Fried Bright
-                                                  Orange Battered Eggs</span
-                                                ></span
-                                              >
+                                              <span class="_rm5fkdz"><div aria-hidden="true" class="_1iurgbx font-w-bold confirm-pay__price-total">
+                                                Jesselle Papa
+                                              </div>
+                                              <span class="text-highlight dir dir-ltr">Conversation with Jesselle
+                                                Papa</span></span>
                                             </div>
                                             <div class="_abkqj1">
                                               <div class="_1pyvextg">
                                                 <div
                                                   aria-hidden="true"
-                                                  class="inbox-container__message-name-overlay"
+                                                  class="inbox-container__message-name-overlay font-w-bold confirm-pay__price-total"
                                                 >
                                                   You<!-- -->:
                                                   <!-- -->Thanks for attending!
@@ -1005,24 +1142,8 @@
                                                   experience.
                                                 </span>
                                               </div>
-                                              <div class="_641ui9">
-                                                <svg
-                                                  viewBox="0 0 16 16"
-                                                  xmlns="http://www.w3.org/2000/svg"
-                                                  style="
-                                                    display: block;
-                                                    height: 12px;
-                                                    width: 12px;
-                                                    fill: currentColor;
-                                                  "
-                                                  aria-hidden="true"
-                                                  role="presentation"
-                                                  focusable="false"
-                                                >
-                                                  <path
-                                                    d="M8.28 11.72L6.16 13.84l-5.5-5.5a1.5 1.5 0 0 1-.103-2.007l.103-.114 5.5-5.5L8.28 2.84 5.12 6H7a9 9 0 0 1 8.996 8.735L16 15h-3a6 6 0 0 0-5.775-5.996L7 9H5.56l2.72 2.72z"
-                                                  ></path>
-                                                </svg>
+                                              <div class="_1nt3229">
+                                                <svg viewBox="0 0 1000 1000" role="img" aria-hidden="false" aria-label="Star" focusable="false" style="height:12px;width:12px;display:block;fill:currentColor"><path d="M972 380c9 28 2 50-20 67L725 619l87 280c11 39-18 75-54 75-12 0-23-4-33-12L499 790 273 962a58 58 0 0 1-78-12 50 50 0 0 1-8-51l86-278L46 447c-21-17-28-39-19-67 8-24 29-40 52-40h280l87-279c7-23 28-39 52-39 25 0 47 17 54 41l87 277h280c24 0 45 16 53 40z"></path></svg>
                                               </div>
                                             </div>
                                             <div class="_13zfmac">
