Make topics clickable on desktop

--- a/lps-resources/resources.html
+++ b/lps-resources/resources.html
@@ -222,12 +222,115 @@
                                           aria-expanded="false"
                                           aria-haspopup="true"
                                           type="button"
-                                          class="_131n1yh"
+                                          class="_131n1yh topic-dropdown"
                                         >
                                           <div class="_10o1uew">
                                             <div class="_pez1s5">Topics</div>
                                           </div>
                                         </button>
+                                      </div>
+                                      <div class="_nu40w4 hidden">
+                                        <div style="margin: 16px 24px;">
+                                          <section>
+                                            <ul class="_7s3ukx">
+                                              <li class="_10l2n4x">
+                                                <a href="/resources/hosting-experiences/t/getting-started-53" class="_pt3ip3y">
+                                                  <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                                                      <div class="_1sq6228">Getting started</div>
+                                                  </h1>
+                                                </a>
+                                                <ul class="_1njl13w">
+                                                  <li class="_16rqo5r">
+                                                    <a href="/resources/hosting-experiences/t/submitting-your-experience-52" class="_pt3ip3y">
+                                                        <div>Submitting your Experience</div>
+                                                      </a>
+                                                    </li>
+                                                    <li class="_16rqo5r">
+                                                      <a href="/resources/hosting-experiences/t/tips-and-tricks-58" class="_pt3ip3y">
+                                                        <div>Tips and tricks</div>
+                                                      </a>
+                                                    </li>
+                                                </ul>
+                                              </li>
+                                              <li class="_10l2n4x">
+                                                <a href="/resources/hosting-experiences/t/attracting-bookings-59" class="_pt3ip3y">
+                                                  <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                                                    <div class="_1sq6228">Attracting bookings</div>
+                                                  </h1>
+                                                </a>
+                                                <ul class="_1njl13w">
+                                                  <li class="_16rqo5r">
+                                                    <a href="/resources/hosting-experiences/t/optimizing-your-experience-page-66" class="_pt3ip3y">
+                                                      <div>Optimizing your Experience page</div>
+                                                    </a>
+                                                  </li>
+                                                  <li class="_16rqo5r">
+                                                    <a href="/resources/hosting-experiences/t/growing-your-hosting-business-60" class="_pt3ip3y">
+                                                      <div>Growing your hosting business</div>
+                                                    </a>
+                                                  </li>
+                                                  <li class="_16rqo5r">
+                                                    <a href="/resources/hosting-experiences/t/what-guests-are-searching-for-67" class="_pt3ip3y">
+                                                      <div>What guests are searching for</div>
+                                                    </a>
+                                                  </li>
+                                                </ul>
+                                              </li>
+                                              <li class="_10l2n4x">
+                                                <a href="/resources/hosting-experiences/t/providing-a-5-star-experience-61" class="_pt3ip3y">
+                                                  <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                                                    <div class="_1sq6228">Providing a 5-star Experience</div>
+                                                  </h1>
+                                                </a>
+                                                <ul class="_1njl13w">
+                                                  <li class="_16rqo5r">
+                                                    <a href="/resources/hosting-experiences/t/delighting-your-guests-62" class="_pt3ip3y">
+                                                      <div>Delighting your guests</div>
+                                                    </a>
+                                                  </li>
+                                                  <li class="_16rqo5r">
+                                                    <a href="/resources/hosting-experiences/t/logistics-and-communication-63" class="_pt3ip3y">
+                                                      <div>Logistics and communication</div>
+                                                    </a>
+                                                  </li>
+                                                </ul>
+                                              </li>
+                                              <li class="_10l2n4x">
+                                                <a href="/resources/hosting-experiences/t/responsible-hosting-64" class="_pt3ip3y">
+                                                  <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                                                      <div class="_1sq6228">Responsible hosting</div>
+                                                  </h1>
+                                                </a>
+                                                <ul class="_1njl13w">
+                                                    <li class="_16rqo5r">
+                                                      <a href="/resources/hosting-experiences/t/health-and-safety-65" class="_pt3ip3y">
+                                                        <div>Health and safety</div>
+                                                      </a>
+                                                    </li>
+                                                    <li class="_16rqo5r">
+                                                      <a href="/resources/hosting-experiences/t/accessibility-69" class="_pt3ip3y">
+                                                        <div>Accessibility</div>
+                                                      </a>
+                                                    </li>
+                                                </ul>
+                                              </li>
+                                              <li class="_10l2n4x">
+                                                <a href="/resources/hosting-experiences/t/online-experiences-55" class="_pt3ip3y">
+                                                  <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                                                    <div class="_1sq6228">Online Experiences</div>
+                                                  </h1>
+                                                </a>
+                                                <ul class="_1njl13w">
+                                                  <li class="_16rqo5r">
+                                                    <a href="/resources/hosting-experiences/t/getting-started-with-online-experiences-54"  class="_pt3ip3y">
+                                                      <div>Getting started with Online Experiences</div>
+                                                    </a>
+                                                  </li>
+                                                </ul>
+                                              </li>
+                                            </ul>
+                                          </section>
+                                        </div>
                                       </div>
                                     </div>
                                   </div>
