fx modal content type select

--- a/lps-resources/experience-resources.html
+++ b/lps-resources/experience-resources.html
@@ -2350,6 +2350,63 @@
       </div>
     </div>
 
+    <div dir="ltr">
+      <div class="_ybk1kl0"></div>
+        <section>
+          <div class="_g2ext" data-testid="modal-container">
+            <div class="_z4lmgp">
+              <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
+              <div class="_z4lmgp">
+                <div role="dialog" aria-label="Content type filters" aria-modal="true" class="_ewwxwe" tabindex="-1"
+                    style="position: absolute; bottom: 553.547px; left: 315px; transform-origin: left bottom;">
+                  <div style="margin-top: 8px;">
+                    <div class="_12kfhdn">
+                      <div class="_1jcr8ov">
+                        <label for="filter-checkbox-ARTICLES">
+                          <div class="_36rlri" style="margin-right: 16px;">
+                            <span class="_10ndlvp">
+                              <input id="filter-checkbox-ARTICLES" name="filter-checkbox-ARTICLES" class="_1yf4i4f" type="checkbox" value="ARTICLES">
+                              <span class="_1v5cvwv4" data-checkbox="true">
+                                <span class="_1oj8hra">
+                                  <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 4; overflow: visible;">
+                                    <path fill="none" d="m4 16.5 8 8 16-16"></path>
+                                  </svg>
+                                </span>
+                              </span>
+                            </span>
+                          </div>
+                          Articles
+                        </label>
+                      </div>
+                      <div class="_1jcr8ov">
+                        <label for="filter-checkbox-VIDEOS">
+                          <div class="_36rlri" style="margin-right: 16px;">
+                            <span class="_10ndlvp">
+                              <input id="filter-checkbox-VIDEOS" name="filter-checkbox-VIDEOS" class="_1yf4i4f" type="checkbox" value="VIDEOS">
+                              <span class="_41yoza" data-checkbox="true"></span>
+                            </span>
+                          </div>
+                          Videos
+                        </label>
+                      </div>
+                    </div>
+                  </div>
+                  <footer class="_zgc1p6">
+                    <button type="button" class="_1e5q4qoz">Clear</button>
+                    <button type="button" class="_1lerwp6l">Save</button>
+                  </footer>
+                </div>
+              </div>
+              <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
+            </div>
+          </div>
+        </section>
+        <div class="_b21f4g">
+          <div aria-live="polite" aria-atomic="true"></div>
+          <div aria-live="assertive" aria-atomic="true"></div>
+        </div>
+    </div>
+
     <script src="../assets/js/pages/resources.js" defer></script>
   </body>
 </html>
