--- a/video.html
+++ b/video.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="../assets/css/global.css" />
-    <link rel="stylesheet" href="../assets/css/pages.css" />
+    <link rel="stylesheet" href="assets/css/global.css" />
+    <link rel="stylesheet" href="assets/css/pages.css" />
     <title>Home - Resource Center - Airbnb</title>
   </head>
   <body class="with-new-header">
@@ -2121,6 +2121,6 @@
         </div>
       </div>
     </div>
-    <script src="../assets/js/pages/resources.js" defer></script>
+    <script src="assets/js/pages/resources.js" defer></script>
   </body>
 </html>
