--- a/article.html
+++ b/article.html
@@ -1248,9 +1248,9 @@
                           <div class="_50mnu4">
                               <div class="_hgs47m">
                                   <div class="_ni9axhe">
-                                      <div class="_e296pg" style="height:48px;width:48px;display:block">
+                                      <div class="relative" style="height:48px;width:48px;display:block">
                                           <div class="_bytwsb">
-                                              <div class="_e296pg" style="width:48px;height:48px" role="img" aria-busy="false"
+                                              <div class="relative" style="width:48px;height:48px" role="img" aria-busy="false"
                                                   aria-label="Author profile picture"><img class="_1u6feuz3" aria-hidden="true"
                                                       src="https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/blt74fee9107deca0d1/5dcaf70fd917b602d491247e/Belo_avatar@2x.jpg?crop=1:1"
                                                       width="48" height="48" alt="Author profile picture"
