--- a/lps-resources/help.html
+++ b/lps-resources/help.html
@@ -6335,7 +6335,7 @@
           <div role="dialog" aria-label="Search help" aria-modal="true" class="_ojerypf" style="position: relative;">
             <div class="c40xpfg dir dir-ltr" data-testid="search-bar-overlay-content"><span
                 class="i772rby dir dir-ltr"><button data-button="close" aria-label="Close" data-testid="search-bar-overlay-close-button"
-                  type="button" class="_oda838"><span class="_e296pg"><svg viewBox="0 0 32 32"
+                  type="button" class="_oda838"><span class="relative"><svg viewBox="0 0 32 32"
                       xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false"
                       style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 4; overflow: visible;">
                       <g fill="none">
