--- a/media-assets.html
+++ b/media-assets.html
@@ -355,7 +355,7 @@
                            </div>
                         </div>
                         <div class="topBar__searchBar col-md-3 col-mdpl-6">
-                           <form class="topBar__searchFormWrap"><input class="topBar__searchForm" placeholder="Search media assets"><button type="submit" class="topBar__searchButton"></button></form>
+                           <form class="relative"><input class="topBar__searchForm" placeholder="Search media assets"><button type="submit" class="topBar__searchButton"></button></form>
                         </div>
                      </div>
                      <div>
@@ -681,7 +681,7 @@
             <span class="sr-only">Close mobile menu</span>
           </button>
           <form
-            class="mobileMenu__searchFormWrap"
+            class="relative"
             method="get"
             action="https://news.airbnb.com/"
           >
