--- a/media-search.html
+++ b/media-search.html
@@ -1702,7 +1702,7 @@
             <span class="sr-only">Close mobile menu</span>
           </button>
           <form
-            class="mobileMenu__searchFormWrap"
+            class="relative"
             method="get"
             action="https://news.airbnb.com/"
           >
