--- a/all-topics.html
+++ b/all-topics.html
@@ -153,7 +153,7 @@
                         type="button"
                         class="_oda838"
                       >
-                        <span class="_e296pg"
+                        <span class="relative"
                           ><svg
                             viewBox="0 0 32 32"
                             xmlns="http://www.w3.org/2000/svg"
@@ -316,7 +316,7 @@
                           Browse our full library of help topics.
                         </div>
                         <div id="role_tabs" role="tablistcontainer">
-                          <div class="_e296pg">
+                          <div class="relative">
                             <div
                               class="_1xkr92p"
                               data-testid="tab-list-wrapper"
