--- a/media-assets-search.html
+++ b/media-assets-search.html
@@ -352,7 +352,7 @@
                            <div class="topBar__leftTop">Media assets: Search Results</div>
                         </div>
                         <div class="topBar__searchBar col-md-3 col-mdpl-6">
-                           <form class="topBar__searchFormWrap"><input class="topBar__searchForm" placeholder="Search media assets"><button type="submit" class="topBar__searchButton"></button></form>
+                           <form class="relative"><input class="topBar__searchForm" placeholder="Search media assets"><button type="submit" class="topBar__searchButton"></button></form>
                         </div>
                      </div>
                      <div class="category__filtersAndResults row">
@@ -718,7 +718,7 @@
             <span class="sr-only">Close mobile menu</span>
           </button>
           <form
-            class="mobileMenu__searchFormWrap"
+            class="relative"
             method="get"
             action="https://news.airbnb.com/"
           >
