--- a/media-contact.html
+++ b/media-contact.html
@@ -684,7 +684,7 @@
             <span class="sr-only">Close mobile menu</span>
           </button>
           <form
-            class="mobileMenu__searchFormWrap"
+            class="relative"
             method="get"
             action="https://news.airbnb.com/"
           >
