--- a/media-home.html
+++ b/media-home.html
@@ -1328,7 +1328,7 @@
             <span class="sr-only">Close mobile menu</span>
           </button>
           <form
-            class="mobileMenu__searchFormWrap"
+            class="relative"
             method="get"
             action="https://news.airbnb.com/"
           >
