--- a/messaging/inbox.html
+++ b/messaging/inbox.html
@@ -2265,7 +2265,7 @@
               <div role="dialog" aria-label="Filter messages" aria-modal="true" class="_1ucy1zjv" style="position: relative;">
                 <div class="_pa35zs">
                   <button aria-label="Close" type="button" class="_oda838" id="show-filter-modal__close">
-                    <span class="_e296pg">
+                    <span class="relative">
                       <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 4; overflow: visible;">
                         <path d="m6 6 20 20"></path>
                         <path d="m26 6-20 20"></path>
@@ -2400,7 +2400,7 @@
               <div role="dialog" aria-label="Filter by Experiences" aria-modal="true" class="_njcq40o" style="position: relative;">
                 <div class="_pa35zs">
                   <button aria-label="Back" type="button" class="_oda838" id="show-filter-experience-modal__close">
-                    <span class="_e296pg">
+                    <span class="relative">
                       <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 4; overflow: visible;">
                         <g fill="none">
                           <path d="m20 28-11.29289322-11.2928932c-.39052429-.3905243-.39052429-1.0236893 0-1.4142136l11.29289322-11.2928932"></path>
