--- a/searching-and-booking.html
+++ b/searching-and-booking.html
@@ -153,7 +153,7 @@
                         type="button"
                         class="_oda838"
                       >
-                        <span class="_e296pg"
+                        <span class="relative"
                           ><svg
                             viewBox="0 0 32 32"
                             xmlns="http://www.w3.org/2000/svg"
