--- a/ticket-selection.html
+++ b/ticket-selection.html
@@ -293,7 +293,7 @@
                             <div data-showat="mediumAndAbove">
                               <div class="_djxl322">
                                 <div class="_ni9axhe">
-                                  <div class="_36rlri">
+                                  <div class="inline-block">
                                     <nav aria-label="breadcrumb">
                                       <div class="_jro6t0">
                                         <div class="_rqfxvmb">
@@ -605,7 +605,7 @@
                                     >
                                       <div>
                                         <div
-                                          class="_36rlri"
+                                          class="inline-block"
                                           style="
                                             margin-bottom: 8px;
                                             margin-right: 8px;
