--- a/topic.html
+++ b/topic.html
@@ -945,7 +945,7 @@
                                     <li class="_1eaes69"><a href="/resources/hosting-experiences" class="_pt3ip3y">
                                             <div class="_7yqyxg" style="color:#222222">Resource Center</div>
                                         </a>
-                                        <div class="_36rlri" style="margin-left:8px;margin-right:8px">
+                                        <div class="inline-block" style="margin-left:8px;margin-right:8px">
                                             <div class="_7vgc6w"><svg viewBox="0 0 18 18" role="presentation" aria-hidden="true"
                                                     focusable="false" style="height:12px;width:12px;fill:currentColor">
                                                     <path
@@ -2363,7 +2363,7 @@
                     <div class="_12kfhdn">
                       <div class="_1jcr8ov">
                         <label for="filter-checkbox-ARTICLES">
-                          <div class="_36rlri" style="margin-right: 16px;">
+                          <div class="inline-block" style="margin-right: 16px;">
                             <span class="_10ndlvp">
                               <input id="filter-checkbox-ARTICLES" name="filter-checkbox-ARTICLES" class="_1yf4i4f" type="checkbox" value="ARTICLES">
                               <span class="_1v5cvwv4" data-checkbox="true">
@@ -2380,7 +2380,7 @@
                       </div>
                       <div class="_1jcr8ov">
                         <label for="filter-checkbox-VIDEOS">
-                          <div class="_36rlri" style="margin-right: 16px;">
+                          <div class="inline-block" style="margin-right: 16px;">
                             <span class="_10ndlvp">
                               <input id="filter-checkbox-VIDEOS" name="filter-checkbox-VIDEOS" class="_1yf4i4f" type="checkbox" value="VIDEOS">
                               <span class="_41yoza" data-checkbox="true"></span>
