--- a/ticket-selection.html
+++ b/ticket-selection.html
@@ -295,7 +295,7 @@
                                 <div class="_ni9axhe">
                                   <div class="inline-block">
                                     <nav aria-label="breadcrumb">
-                                      <div class="_jro6t0">
+                                      <div class="flex">
                                         <div class="_rqfxvmb">
                                           <div style="margin-right: 8.8px">
                                             <svg
