--- a/messaging/inbox.html
+++ b/messaging/inbox.html
@@ -369,7 +369,7 @@
                             <div class="_17c3r99"></div>
                             <div class="flex-grow-1">
                               <div class="_q5x9z0" data-testid="folder-subnav">
-                                <section class="place__recommended-section">
+                                <section class="mb-10">
                                   <header>
                                     <h2 class="_1mke8tr">Inbox</h2>
                                   </header>
@@ -439,7 +439,7 @@
                                     </li>
                                   </ul>
                                 </section>
-                                <section class="place__recommended-section">
+                                <section class="mb-10">
                                   <div><h3 class="_gagmpc">SETTINGS</h3></div>
                                   <div>
                                     <ul class="place__recommended-no-ul">
