--- a/submission/about.html
+++ b/submission/about.html
@@ -1045,7 +1045,7 @@
                                 </div>
                               </section>
                             </div>
-                            <div class="place__recommended-section">
+                            <div class="mb-10">
                               <div class="">
                                 <div class="margin__y-24">
                                   <fieldset class="site-content__content-fieldset" role="radiogroup">
