--- a/article.html
+++ b/article.html
@@ -1076,7 +1076,7 @@
                                 <div style="margin-bottom:16px">
                                   <div class="_11ry7lz">
                                     <section>
-                                      <div class="_onao3d">
+                                      <div class="text-3xl">
                                         <h2 tabindex="-1" elementtiming="LCP-target" class="_14i3z6h">1. Start with an
                                               introductory price</h2>
                                       </div>
@@ -1104,7 +1104,7 @@
                                 <div style="margin-bottom:16px">
                                   <div class="_11ry7lz">
                                     <section>
-                                      <div class="_onao3d">
+                                      <div class="text-3xl">
                                           <h2 tabindex="-1" elementtiming="LCP-target" class="_14i3z6h">2. Adjust your
                                               calendar settings</h2>
                                       </div>
@@ -1133,7 +1133,7 @@
                                 <div style="margin-bottom:16px">
                                   <div class="_11ry7lz">
                                     <section>
-                                      <div class="_onao3d">
+                                      <div class="text-3xl">
                                         <h2 tabindex="-1" elementtiming="LCP-target" class="_14i3z6h">3. Allow
                                             last-minute bookings</h2>
                                       </div>
