--- a/online-experience/experiences.html
+++ b/online-experience/experiences.html
@@ -232,7 +232,7 @@
                                       class="heading"
                                       elementtiming="LCP-target"
                                     >
-                                      <span class="site-content__header-text"
+                                      <span class="text-3xl"
                                         >Your experiences</span
                                       >
                                     </h1>
